prevent horizontal scrollbar for modal content

--- a/modal.scss
+++ b/modal.scss
@@ -5,4 +5,5 @@
 .modal-body{
 	max-height: 80vh;
 	overflow-y: auto;
+	overflow-x: hidden;
 }
